# qa-system

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.ai/config/: agent-boundary.yaml  ai-pipeline.yaml  ai-whitelist.yaml  arch-review.yaml  change-management.yaml  codeowner-rules.yaml  compliance-mapping.yaml  dead-code.yaml  deployment-gates.yaml  framework-self-audit.yaml  issue-template.yaml  nfr-baseline.yaml  performance-baseline.yaml  quality-plan.yaml  retro-gates.yaml  review-rules.yaml  schema-validator.yaml  secrets-scan.yaml  security-baseline.yaml  test-coverage.yaml  worm-policy.yaml
.ai/projects/: linglong_github.yaml  registry.yaml
.ai/prompts/: CLAUDE.md
.ai/schemas/: qa-report.schema.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-code-review.yml  ai-nightly-scan.yml
_project_examples/: README.md  check_doc_health.py  coordinator.py  git_safe_branch.py  pre_push_hook.py  self_audit.py
_project_examples/checkers/: chk_anchorchecker.py  chk_apisignaturechecker.py  chk_codedocsyncchecker.py  chk_doccoveragechecker.py  chk_docdebtratiochecker.py  chk_docrefenforcer.py  chk_faithfulnesschecker.py  chk_gittraceabilitychecker.py  chk_glossarychecker.py  chk_hallucinationchecker.py  chk_linkchecker.py  chk_namingrulechecker.py  chk_paramchecker.py  chk_provenancechecker.py  chk_readabilitychecker.py  chk_schemachecker.py  chk_soxscopechecker.py
_project_examples/config/: asset_reuse_map.yaml  content-types.yaml  coordinator-config.yaml  doc-build.yaml  doc-owned.yaml  entropy-gc.yaml  external-docs.yaml  feedback.yaml  glossary.yaml  (+8 more)
docs/: .pre-commit-config.yaml  GITHUB工作指南.md  ai-coding-compliance.md  ai-prompt-templates.md  case-study-linglong.md  ci-ai-review.yml  ci-code-quality.yml  layer-boundary.md  main-zero-pollution.md  pyproject.toml  qa-architecture.html  qa-flow-automation.md  quality-gates.md  review-checklist.md  toolization-analysis.md
docs/SOP/: deploy.md
docs/retrospectives/: 2026-07-20.md
scripts/: __init__.py  chk_claudevalidator.py  chk_codeban_a.py  chk_codeban_b.py  chk_codebanchecker.py  chk_codestyle.py  chk_configauditchecker.py  chk_customrules.py  chk_cyclicchecker.py  chk_deadcodechecker.py  chk_docconsistency.py  chk_documentation.py  chk_fusedetector.py  chk_governance.py  chk_healthscorer.py  chk_importboundary.py  chk_inplacechecker.py  chk_load_yaml.py  chk_lookaheadchecker.py  chk_production.py  chk_qualitygates.py  chk_secretchecker.py  chk_securityplus.py  chk_zeroprint.py  qa.py  qa_ai.py  qa_cb_tick.py  qa_check.py  qa_classify.py  qa_dashboard.py  qa_defect.py  qa_gate.py  qa_plan.py  qa_self_test.py  qa_setup.py  setup-protection.sh
(+51 files in other folders)
