[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qa-system"
version = "4.0.0"
description = "独立质量工程系统 — 玲珑量化治理子系统"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.0",
]
